Fix buttons spacing

--- a/src/assets/styles/style.css
+++ b/src/assets/styles/style.css
@@ -456,7 +456,7 @@ input[type=radio]:checked {
 }
 
 #pay-button-container {
-    left: calc(50% - 39.5vmin - 0.5vmin);
+    left: calc(50% - 39.5vmin - 0.75vmin);
     bottom: calc(42% - 8vmin - 1vmin);
 }
 
@@ -490,7 +490,7 @@ input[type=radio]:checked {
 }
 
 #free-button-container {
-    right: calc(50% - 39.5vmin - 0.5vmin);
+    right: calc(50% - 39.5vmin - 0.75vmin);
     bottom: calc(42% - 8vmin - 1vmin);
 }
 
